styles/sections/media-collage.css
.media-collage .media-collage-list {
  column-gap: 0;
  row-gap: 0;
  display: flex;
}

.media-collage-card {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.media-collage .text-above {
  display: flex;
  flex-direction: column-reverse;
}

.media-collage-btn {
  @apply
    bg-scheme-accent
    text-scheme-bg;
  height: 35px;
  min-width: 168px;
  text-align: center;
  padding: .25rem 2rem;
}

/* // MULTICOLUMN STYLES - COULD MAYBE BE DELETED ?? // */

.media-collage .title {
  margin: 0;
}

.media-collage.no-heading .title {
  display: none;
}

.media-collage .title-wrapper-with-link {
  margin-top: 0;
}

@media screen and (max-width: 767px) {
  .media-collage .title-wrapper-with-link {
    margin-bottom: 3rem;
  }

  .media-collage .page-width {
    padding-left: 0;
    padding-right: 0;
  }
}

.media-collage-card__image-wrapper--third-width {
  width: 33%;
}

.media-collage-card__image-wrapper--half-width {
  width: 50%;
}

.media-collage-list__item.center .media-collage-card__image-wrapper:not(.media-collage-card__image-wrapper--full-width),
.media-collage-list__item:only-child {
  margin-left: auto;
  margin-right: auto;
}

.media-collage .button {
  margin-top: 1.5rem;
}

@media screen and (min-width: 768px) {
  .media-collage .button {
    margin-top: 4rem;
  }
}

.media-collage-list {
  margin-top: 0;
  margin-bottom: 0;
  padding: 0;
}

.media-collage-list__item:only-child {
  max-width: 72rem;
}

.media-collage-list__item--empty {
  display: none;
}

.media-collage:not(.background-none) .media-collage-card {
  background: rgb(var(--color-scheme-bg));
  height: 100%;
}

.media-collage.background-primary .media-collage-card {
  background: rgb(var(--color-scheme-bg))
    linear-gradient(rgb(var(--color-scheme-fg) .04), rgb(var(--color-scheme-fg) .04));
}

.media-collage-list h3 {
  line-height: calc(1 + .5 / max(1, var(--font-heading-scale)));
}

.media-collage-list h3,
.media-collage-list p {
  margin: 0;
}

.media-collage-card__info > :nth-child(2) {
  margin-top: 1rem;
}

.media-collage-list__item.center .media--adapt,
.media-collage-list__item .media--adapt .media-collage-card__image {
  width: auto;
}

.media-collage-list__item.center .media--adapt img {
  left: 50%;
  transform: translateX(-50%);
}

@media screen and (max-width: 767px) {
  .media-collage-list {
    margin: 0;
    width: 100%;
  }

  .media-collage-list:not(.slider) {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media screen and (min-width: 768px) {
  .media-collage-list.slider,
  .media-collage-list.grid--4-col-desktop {
    padding: 0;
  }

  .media-collage-list__item,
  .grid--4-col-desktop .media-collage-list__item {
    padding-bottom: 0;
  }

  .background-none .grid--2-col-tablet .media-collage-list__item {
    margin-top: 4rem;
  }
}

.background-none .media-collage-card-spacing {
  padding: 0;
  margin: 0;
}

.media-collage-card__info {
  padding: 2.5rem;
}

.background-none .media-collage-card__info {
  padding-top: 0;
  padding-left: 0;
  padding-right: 0;
}

.background-none .slider .media-collage-card__info {
  padding-bottom: 0;
}

.background-none .media-collage-card__image-wrapper + .media-collage-card__info {
  padding-top: 2.5rem;
}

.background-none .slider .media-collage-card__info {
  padding-left: .5rem;
}

.background-none .slider .media-collage-card__image-wrapper + .media-collage-card__info {
  padding-left: 1.5rem;
}

.background-none .media-collage-list:not(.slider) .center .media-collage-card__info {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

@media screen and (max-width: 767px) {
  .background-none .slider .media-collage-card__info {
    padding-bottom: 1rem;
  }

  .media-collage.background-none .slider.slider--mobile {
    margin-bottom: 0;
  }
}

@media screen and (min-width: 768px) {
  .background-none .media-collage-card__image-wrapper {
    margin-left: 1.5rem;
    margin-right: 1.5rem;
  }

  .background-none .media-collage-list .media-collage-card__info,
  .background-none .media-collage-list:not(.slider) .center .media-collage-card__info {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

.media-collage-card {
  position: relative;
  box-sizing: border-box;
}

.media-collage-card > .media-collage-card__image-wrapper--full-width:not(.media-collage-card-spacing) {
  border-top-left-radius: calc(var(--text-boxes-radius) - var(--text-boxes-border-width));
  border-top-right-radius: calc(var(--text-boxes-radius) - var(--text-boxes-border-width));
  overflow: hidden;
}

.media-collage.background-none .media-collage-card {
  border-radius: 0;
}

.media-collage-card__info .link {
  text-decoration: none;
  font-size: inherit;
  margin-top: 1.5rem;
}

.media-collage-card__info .icon-wrap {
  margin-left: .8rem;
  white-space: nowrap;
}

@media screen and (min-width: 1024px) {
  .media-collage-list__item--empty {
    display: list-item;
  }
}

